// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with responsive styles 1`] = `
.c0 {
  color: #006699;
  font-family: "TimesDigitalW04-Regular";
  font-size: 17px;
  line-height: 26px;
  margin-bottom: 25px;
  margin-top: 0;
}

@media (min-width:768px) {
  .c0 {
    font-size: 18px;
    line-height: 30px;
  }
}

<a
  className="c0"
  href="http://thetimes.co.uk"
  style={
    Object {
      "textDecoration": "underline",
    }
  }
>
  The Times
</a>
`;

exports[`2. with a target 1`] = `
<a
  href="http://thetimes.co.uk"
  style={
    Object {
      "textDecoration": "none",
    }
  }
  target="_blank"
>
  The Times
</a>
`;

exports[`3. renders link 1`] = `
<a
  href="http://thetimes.co.uk"
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  The Times
</a>
`;

exports[`4. renders link with target 1`] = `
<a
  href="http://thetimes.co.uk"
  style={
    Object {
      "textDecoration": "none",
    }
  }
  target="_blank"
>
  The Times
</a>
`;

exports[`5. renders text link 1`] = `
<a
  className="css-reset-4rbku5 css-cursor-18t94o4 css-text-76zvg2 r-cursor-1loqt21 r-textDecorationLine-1ddef8g"
  href="http://thetimes.co.uk"
  role="link"
>
  The Times
</a>
`;

exports[`6. text link with multiple styles 1`] = `
<a
  className="css-reset-4rbku5 css-cursor-18t94o4 css-text-76zvg2 r-cursor-1loqt21 r-textDecorationLine-1ddef8g"
  href="http://thetimes.co.uk"
  role="link"
  style={
    Object {
      "backgroundColor": "rgba(0,0,255,1.00)",
      "color": "rgba(255,0,0,1.00)",
    }
  }
>
  The Times
</a>
`;

exports[`7. text link with children 1`] = `
<a
  className="css-reset-4rbku5 css-cursor-18t94o4 css-text-76zvg2 r-cursor-1loqt21 r-textDecorationLine-1ddef8g"
  href="http://thetimes.co.uk"
  role="link"
>
  <p>
    The Times
  </p>
</a>
`;

exports[`8. text link with target 1`] = `
<a
  className="css-reset-4rbku5 css-cursor-18t94o4 css-text-76zvg2 r-cursor-1loqt21 r-textDecorationLine-1ddef8g"
  href="http://thetimes.co.uk"
  rel=" noopener noreferrer"
  role="link"
  target="_blank"
>
  <p>
    The Times
  </p>
</a>
`;
